# synapse-manage-last-admin

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  semgrep.yml  tests.yml
manage_last_admin/: __init__.py  _constants.py
scripts-dev/: lint.sh
tests/: __init__.py  test_manage_last_admin.py  test_manage_last_admin_methods.py  test_manage_last_admin_scenarii.py
