[metadata]
name = manage_last_admin
description = A third-party rules module for Synapse to automatically make default level as admin or set moderators as admin when the last admin leaves it.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tchapgouv/synapse-manage-last-admin
version = 0.2.0

classifiers =
  License :: OSI Approved :: Apache Software License


[options]
packages =
  manage_last_admin
python_requires = >= 3.7
install_requires =
  attrs


[options.package_data]
manage_last_admin = py.typed


[options.extras_require]
dev =
  # for tests
  pydantic>=1.7.4, <2.0
  matrix-synapse==1.84.0
  tox
  twisted
  aiounittest
  # for type checking
  mypy == 1.6.1
  # for linting
  black == 23.10.0
  flake8 == 6.1.0
  isort == 5.12.0


[flake8]
# see https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# for error codes. The ones we ignore are:
#  W503: line break before binary operator
#  W504: line break after binary operator
#  E203: whitespace before ':' (which is contrary to pep8?)
#  E501: Line too long (black enforces this for us)
# (this is a subset of those ignored in Synapse)
ignore=W503,W504,E203,E501